--- a/static/css/style.css
+++ b/static/css/style.css
@@ -186,6 +186,36 @@ opacity: 1;
   line-height: 27px;
 }
 
+/* --------------- Profile --------------- */
+.profile-heading {
+  height: auto;
+  display: flex;
+  justify-content: center;
+}
+
+.profile-heading p {
+  font-size: 22px;
+  width: 70%;
+  margin: 30px 0;
+}
+
+.profile {
+  margin-top: 30px;
+}
+
+.profile h2 {
+  margin-top: 0;
+}
+
+.profile-buttons {
+  padding: 0 0 10px 10px;
+}
+
+.profile-buttons button {
+  border: none;
+  background-color: #fff;
+}
+
 /* --------------- Footer --------------- */
 
 footer {
