--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,11 @@
                 <a href="{{ url_for('get_seed', seed_id=recent._id) }}">
                 <div class="card medium s4 seed-card hoverable">
                     <div class="overlay-card"><h4>{{ recent.seed_name }}</h4></div>
-                    <img class="seed-image" src="{{ recent.seed_image }}" alt="Seed Image">
+                    {% if recent.seed_image == "" %}
+                        <img class="seed-image" src="static/images/plant-icon.png" alt="Seed Image">
+                    {% else %}
+                        <img class="seed-image" src="{{ recent.seed_image }}" alt="Seed Image">
+                    {% endif %}
                 </div>
                 </a>
             </div>
