add 404.html and add block title to every html page

--- a/templates/edit_seed.html
+++ b/templates/edit_seed.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}The Seed Shelf - Edit Seed{% endblock %}
 {% block content %}
     <div>
         <h3 class="center-align">Edit Seed</h3>
