--- a/templates/seeds.html
+++ b/templates/seeds.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}The Seed Shelf - Seeds{% endblock %}
 {% block content %}
     <div class="site-container">
         <h3 class="center-align">Seeds</h3>
