--- a/templates/add_seed.html
+++ b/templates/add_seed.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}The Seed Shelf - Add Seed{% endblock %}
 {% block content %}
     <div>
         <h3 class="center-align">Add Seed</h3>
