--- a/templates/base.html
+++ b/templates/base.html
@@ -11,9 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
         type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
-    {% block styles %}
-    {% endblock %}
-    <title>The Seed Shelf</title>
+    <title>{% block title %}{% endblock %}</title>
 </head>
 
 <body>
