--- a/templates/grow_seed.html
+++ b/templates/grow_seed.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}The Seed Shelf - Grow Seed{% endblock %}
 {% block content %}
 
 <div class="site-container">
