--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}The Seed Shelf - Log In{% endblock %}
 {% block content %}
 
     <h3 class="center-align">Log In</h3>
