--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}The Seed Shelf - Register{% endblock %}
 {% block content %}
 
     <h3 class="center-align">Register</h3>
