add border-radius to search bar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -152,6 +152,10 @@ opacity: 1;
 }
 
 /* --------------- seeds.html --------------- */
+.search-bar {
+  border-radius: 70px;
+}
+
 .search-button-container {
   display: flex;
   justify-content: center;
