--- a/templates/seeds.html
+++ b/templates/seeds.html
@@ -4,7 +4,7 @@
     <div class="site-container">
         <h3 class="center-align">Seeds</h3>
 
-        <div class="row card-panel">
+        <div class="row card-panel search-bar">
             <form action="{{ url_for('search') }}" method="post" class="col s12 m6">
                 <div class="row search-margin valign-wrapper center-align">
                     <div class="input-field col s12">
