--- a/templates/grow_seed.html
+++ b/templates/grow_seed.html
@@ -60,15 +60,13 @@
         </div>
     </div>
     <div id="modal1" class="modal">
-        <div class="modal-content">
-          <h4 class="center-align">Are you sure?</h4>
-          <p class="center-align">Do you really want to delete this seed?</p>
+        <div class="modal-content center-align">
+            <h4>Are you sure that you want to delete this seed?</h4>
+            <p>Click "Confirm" to delete or "Cancel" to go back.</p>
+            <a href="#!" class="modal-close btn waves-effect red white-text"><i class="far fa-times-circle"></i> Cancel</a>
+            <a href="{{ url_for('delete_seed', seed_id=seed._id) }}" class="modal-close btn waves-effect green white-text"><i
+                    class="far fa-check-circle"></i> Confirm</a>
         </div>
-        <div class="modal-footer">
-          <a href="#!" class="modal-close btn waves-effect red white-text"><i class="far fa-times-circle"></i> Cancel</a>
-          <a href="{{ url_for('delete_seed', seed_id=seed._id) }}" class="modal-close btn waves-effect green white-text"><i class="far fa-check-circle"></i> Delete</a>
-        </div>
-      </div>
 </div>
 
 {% endblock %}
