--- a/templates/profile.html
+++ b/templates/profile.html
@@ -57,6 +57,16 @@
         </div>
         {% endif %}
 </div>
+
+<!-- Modal Structure -->
+<div id="modal1" class="modal">
+    <div class="modal-content center-align">
+      <h4>Are you sure that you want to delete this seed?</h4>
+      <p>Click "Confirm" to delete or "Cancel" to go back.</p>
+      <a href="{{ url_for('delete_seed', seed_id=seeds._id) }}" class="waves-effect waves-light btn green">Confirm</a>
+      <a class="waves-effect waves-light btn">Cancel</a>
+    </div>
+  </div>
     
 
 {% endblock %}
