--- a/templates/seeds.html
+++ b/templates/seeds.html
@@ -43,6 +43,9 @@
                     {% else %}
                         <img class="seed-image" src="{{ seed.seed_image }}" alt="Seed Image">
                     {% endif %}
+                    <p class="seed-details card">
+                        {{ recent.seed_name }}
+                    </p>
                 </div>
                 </a>
             </div>
