--- a/templates/seeds.html
+++ b/templates/seeds.html
@@ -34,7 +34,7 @@
 
         <div class="row">
             {% for seed in seeds %}
-            <div class="col s12 m3 flex">
+            <div class="col s12 m4 l3 flex">
                 <a href="{{ url_for('get_seed', seed_id=seed._id) }}">
                 <div class="card small s4 hoverable">
                     <div class="overlay-card"><h4>{{ seed.seed_name }}</h4></div>
@@ -44,7 +44,7 @@
                         <img class="seed-image" src="{{ seed.seed_image }}" alt="Seed Image">
                     {% endif %}
                     <p class="seed-details card">
-                        {{ recent.seed_name }}
+                        {{ seed.seed_name }}
                     </p>
                 </div>
                 </a>
