--- a/templates/profile.html
+++ b/templates/profile.html
@@ -24,7 +24,7 @@
                         <div class="card">
                             <div class="card-image">
                                 {% if seed.seed_image == "" %}
-                                    <img class="profile-seed-image" src="static/images/plant-icon.png" alt="Seed Image">
+                                    <img class="profile-seed-image" src="/static/images/default-image.jpg" alt="Seed Image">
                                 {% else %}
                                     <img class="profile-seed-image" src="{{ seed.seed_image }}" alt="Seed Image">
                                 {% endif %}
