--- a/templates/seeds.html
+++ b/templates/seeds.html
@@ -39,7 +39,7 @@
                 <div class="card small s4 hoverable">
                     <div class="overlay-card"><h4>{{ seed.seed_name }}</h4></div>
                     {% if seed.seed_image == "" %}
-                        <img class="seed-image" src="static/images/plant-icon.png" alt="Seed Image">
+                        <img class="seed-image" src="/static/images/default-image.jpg" alt="Seed Image">
                     {% else %}
                         <img class="seed-image" src="{{ seed.seed_image }}" alt="Seed Image">
                     {% endif %}
