add helper text to add seed and edit seed forms

--- a/templates/add_seed.html
+++ b/templates/add_seed.html
@@ -34,18 +34,21 @@
                     <div class="input-field col s12">
                         <textarea id="sowing_instructions" name="sowing_instructions" class="materialize-textarea"></textarea>
                         <label for="sowing_instructions">Sowing Instructions</label>
+                        <span class="helper-text">Please enter each instruction on a new line.</span>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
                         <textarea id="growing_instructions" name="growing_instructions" class="materialize-textarea"></textarea>
                         <label for="growing_instructions">Growing Instructions</label>
+                        <span class="helper-text">Please enter each instruction on a new line.</span>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s12">
                         <textarea id="harvesting_instructions" name="harvesting_instructions" class="materialize-textarea"></textarea>
                         <label for="harvesting_instructions">Harvesting Instructions</label>
+                        <span class="helper-text">Please enter each instruction on a new line.</span>
                     </div>
                 </div>
                 <div class="row">
