--- a/templates/edit_seed.html
+++ b/templates/edit_seed.html
@@ -42,6 +42,7 @@
                             {{- seed.sowing_instructions -}}
                         </textarea>
                         <label for="sowing_instructions">Sowing Instructions</label>
+                        <span class="helper-text">Please enter each instruction on a new line.</span>
                     </div>
                 </div>
                 <div class="row">
@@ -50,6 +51,7 @@
                             {{- seed.growing_instructions -}}
                         </textarea>
                         <label for="growing_instructions">Growing Instructions</label>
+                        <span class="helper-text">Please enter each instruction on a new line.</span>
                     </div>
                 </div>
                 <div class="row">
@@ -58,6 +60,7 @@
                             {{- seed.harvesting_instructions -}}
                         </textarea>
                         <label for="harvesting_instructions">Harvesting Instructions</label>
+                        <span class="helper-text">Please enter each instruction on a new line.</span>
                     </div>
                 </div>
                 <div class="row">
