adjust padding of card on profile page

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -29,7 +29,7 @@
                                     <img class="profile-seed-image" src="{{ seed.seed_image }}" alt="Seed Image">
                                 {% endif %}
                             </div>
-                            <div class="card-content">
+                            <div class="profile-card">
                                 <p>
                                     <strong>Plant:</strong> {{ seed.seed_name }}
                                     <br>
