add margin-top to headings on home page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -152,6 +152,10 @@ opacity: 1;
   margin-top: 10vh;
 }
 
+.profile-heading {
+  margin-top: 30px;
+}
+
 /* --------------- seeds.html --------------- */
 .search-bar {
   border-radius: 70px;
