change colour of button on Log In page

--- a/templates/login.html
+++ b/templates/login.html
@@ -27,7 +27,7 @@
                 </div>
                 <!-- Log In Button -->
                 <div class="row">
-                    <button type="submit" class="col s12 btn-large orange">Log In <i class="fas fa-sign-in-alt"></i></button>
+                    <button type="submit" class="col s12 btn-large green darken-3">Log In <i class="fas fa-sign-in-alt"></i></button>
                 </div>
             </div>
         </form>
