--- a/static/css/style.css
+++ b/static/css/style.css
@@ -205,7 +205,7 @@ opacity: 1;
 
 .instructions li {
   font-size: 16px;
-  line-height: 27px;
+  line-height: 30px;
 }
 
 /* --------------- Profile --------------- */
@@ -317,6 +317,10 @@ footer {
 /* --------------- Media Queries --------------- */
 
 @media screen and (max-width: 1200px) {
+  .container {
+    width: 90%;
+  }
+
   .overlay-card {
     opacity: 1;
   }
