--- a/templates/edit_seed.html
+++ b/templates/edit_seed.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block title %}The Seed Shelf - Edit Seed{% endblock %}
 {% block content %}
-    <div>
+    <div class="container">
         <h3 class="center-align">Edit Seed</h3>
-        <div class="row container">
+        <div class="row">
             <form class="col s12" method="POST" action="{{ url_for('edit_seed', seed_id=seed._id) }}">
                 <div class="row">
                     <div class="input-field col s6">
