add comments to add seed and edit seed pages

--- a/templates/add_seed.html
+++ b/templates/add_seed.html
@@ -6,10 +6,12 @@
         <div class="row container">
             <form class="col s12" method="POST" action="{{ url_for('add_seed') }}">
                 <div class="row">
+                    <!-- Seed Name -->
                     <div class="input-field col s6">
                         <input placeholder="Seed Name" id="seed_name" name="seed_name" type="text" class="validate">
                         <label for="seed_name">Seed Name</label>
                     </div>
+                    <!-- Seed Category -->
                     <div class="input-field col s6">
                         <select id="category_name" name="category_name" class="validate" required>
                             <option value="" disabled selected>Choose a category</option>
@@ -21,15 +23,18 @@
                     </div>
                 </div>
                 <div class="row">
+                    <!-- Seed Description -->
                     <div class="input-field col s6">
                         <textarea id="seed_description" name="seed_description" class="materialize-textarea"></textarea>
                         <label for="seed_description">Description</label>
                     </div>
+                    <!-- Seed Image URL -->
                     <div class="input-field col s6">
                         <input id="seed_image" name="seed_image" type="text" class="validate">
                         <label for="seed_image">Image URL</label>
                     </div>
                 </div>
+                <!-- Seed Sowing Instructions -->
                 <div class="row">
                     <div class="input-field col s12">
                         <textarea id="sowing_instructions" name="sowing_instructions" class="materialize-textarea"></textarea>
@@ -37,6 +42,7 @@
                         <span class="helper-text">Please enter each instruction on a new line.</span>
                     </div>
                 </div>
+                <!-- Seed Growing Instructions -->
                 <div class="row">
                     <div class="input-field col s12">
                         <textarea id="growing_instructions" name="growing_instructions" class="materialize-textarea"></textarea>
@@ -44,6 +50,7 @@
                         <span class="helper-text">Please enter each instruction on a new line.</span>
                     </div>
                 </div>
+                <!-- Seed Harvesting Instructions -->
                 <div class="row">
                     <div class="input-field col s12">
                         <textarea id="harvesting_instructions" name="harvesting_instructions" class="materialize-textarea"></textarea>
@@ -51,6 +58,7 @@
                         <span class="helper-text">Please enter each instruction on a new line.</span>
                     </div>
                 </div>
+                <!-- Submit Button -->
                 <div class="row">
                     <div class="col s12 center-align">
                         <button class="btn waves-effect green darken-3 waves-light" type="submit">Submit
