--- a/templates/login.html
+++ b/templates/login.html
@@ -32,6 +32,7 @@
             </div>
         </form>
     </div>
+    <!-- Link to registration page -->
     <div class="row">
         <div class="col s12">
             <p class="center-align">
